--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -11,7 +11,7 @@ jobs:
           uses: actions/checkout@v2
 
         - name: Build
-          run: mkdir build & find ./ -iname "*.md" ! -name 'README.md' -type f -exec sh -c 'pandoc -f markdown -t html --self-contained --css=pandoc.css "${0}" -o "build/${0%.md}.html" --metadata pagetitle="${0%.md}"' {} \;
+          run: mkdir build & find ./notes -iname "*.md" ! -name 'README.md' -type f -exec sh -c 'pandoc -f markdown -t html --self-contained --css=pandoc.css "${0}" -o "build/$(basename ${0%.md}).html" --metadata pagetitle="$(basename ${0%.md})"' {} \;
 
         - name: Deploy
           uses: JamesIves/github-pages-deploy-action@v4.2.3
