--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,6 +13,9 @@ jobs:
         - name: Build
           run: mkdir build & find ./notes -iname "*.md" ! -name 'README.md' -type f -exec sh -c 'pandoc -f markdown -t html --self-contained --css=pandoc.css "${0}" -o "build/$(basename ${0%.md}).html" --metadata pagetitle="$(basename ${0%.md})"' {} \;
 
+        - name: Update index links
+          run: sed -i 's/.md#/.html#/gI' build/index.html
+
         - name: Deploy
           uses: JamesIves/github-pages-deploy-action@v4.2.3
           with:
