--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
           run: mkdir build & find ./notes -iname "*.md" ! -name 'README.md' -type f -exec sh -c 'pandoc -f markdown -t html --self-contained --css=pandoc.css "${0}" -o "build/$(basename ${0%.md}).html" --metadata pagetitle="$(basename ${0%.md})"' {} \;
 
         - name: Update index links
-          run: sed -i 's/.md#/.html#/gI' build/index.html
+          run: sed -ri "s/(href=\".)*(.md)/\.html\1/g" build/index.html
 
         - name: Deploy
           uses: JamesIves/github-pages-deploy-action@v4.2.3
